# raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.py  rustfmt.toml
.github/workflows/: ci.yml
ci/: install-rustup.sh  rustup.sh
scenes/: cornell.yaml  cornell_lucy.yaml  distant.yaml  dual.yaml  light.yaml  lucy.yaml  quads.yaml  teapot.yaml
src/: bvh.rs  camera.rs  geom.rs  main.rs  material.rs  progress.rs  ray.rs  scene.rs  surfaces.rs  trace.rs  util.rs  vec.rs
src/scene/: example.rs  load.rs  mod.rs
src/surfaces/: bvh.rs
