[package]
name = "raytracer"
version = "0.1.0"
authors = ["Christian Briones <cwbriones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8", features = ["small_rng"]}
anyhow = "1.0"
png = "0.17"
structopt = "0.3"
thiserror = "1.0"
tobj = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
once_cell = "1.8"
flate2 = "1.0.22"
rayon = "1.8"

[profile.release]
# lto = true
