[package]
name = "raytracer"
version = "0.1.0"
authors = ["Christian Briones <cwbriones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
once_cell = "1.18"
png = "0.17"
rand = {version = "0.8", features = ["small_rng"]}
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tobj = "4.0"

[profile.release]
# lto = true
